fix: broken UI on small screens

--- a/src/game/tlg.scss
+++ b/src/game/tlg.scss
@@ -1,10 +1,10 @@
 .tlg-app__title {
-	position: fixed;
-	top: 2.5rem;
+	position: absolute;
+	top: 2rem;
+	right: 2rem;
 	text-align: right;
-	margin-top: 2rem;
 	text-transform: uppercase;
-	font-size: 2rem;
+	font-size: 1.5rem;
 	font-weight: bold;
 	letter-spacing: 0.75rem;
 	background-color: #f7fafb;
@@ -39,15 +39,13 @@
 
 .tlg-app {
 	position: relative;
-	width: 100vw;
-	height: 100vh;
+	min-width: 100vw;
+	min-height: 100vh;
 	display: flex;
 	justify-content: center;
 	font-family: $ff-serif;
 
 	&__container {
-		position: absolute;
-		top: 280px;
 		align-self: center;
 	}
 
